--- a/frontend/leclens/pubspec.yaml
+++ b/frontend/leclens/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   youtube_player_iframe: ^5.2.1
   google_fonts: ^6.2.1
+  file_picker: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
