--- a/frontend/leclens/pubspec.yaml
+++ b/frontend/leclens/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   youtube_player_iframe: ^5.2.1
   google_fonts: ^6.2.1
   file_picker: ^9.0.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
